<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/size20"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_save_file"
        android:textSize="@dimen/size14"
        android:textStyle="bold"
        android:textColor="@color/app_main"
        />

    <EditText
        android:id="@+id/edtName"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size40"
        android:background="@drawable/bg_gray1_round10"
        android:layout_marginVertical="@dimen/size15"
        android:paddingHorizontal="@dimen/size20"
        android:hint="@string/txt_name"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/size35"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/no"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/size20"
            android:background="@drawable/bg_stroke1_gray1_round10"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/txt_no"
                android:layout_margin="@dimen/size2"
                android:paddingHorizontal="@dimen/size15"
                android:paddingVertical="@dimen/size5"
                android:textSize="@dimen/size12"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="@color/black"
                />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/save"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_gradient_app_round7"
            android:layout_marginLeft="@dimen/size20"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/txt_save"
                android:background="@drawable/bg_white_round7"
                android:layout_margin="@dimen/size2"
                android:paddingHorizontal="@dimen/size15"
                android:paddingVertical="@dimen/size5"
                android:textSize="@dimen/size12"
                android:textColor="@color/app_main"
                android:textStyle="bold"
                android:gravity="center"
                />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>